src/assets/styles/index.css
:root {
    --appbg0: rgb(227, 19, 55); --appfg0: white; --appsg0: rgba(227, 19, 55, 0.37);
    --appbg1: rgb(227, 19, 55); --appfg1: white; --appsg1: rgba(227, 19, 55, 0.37);
    --appbg2: #ffffff;        --appfg2: black;
    --appbg3: #ffffff;        --appfg3: black;
    --appbgbtn1: #059669;     --appfgbtn1: white;
    --appbgbtn2: #eab308;     --appfgbtn2: white;

    --appbgowner: #007b00;
    --appbgadmin: #2368D5;
    --appbgmod: #2e8336;
}
.appbg0 { background: var(--appbg0); }
.appbg1 { background: var(--appbg1); }
.appbg2 { background: var(--appbg2); }
.appbg3 { background: var(--appbg3); }

.appfg0 { color: var(--appfg0); }
.appfg1 { color: var(--appfg1); }
.appfg2 { color: var(--appfg2); }
.appfg3 { color: var(--appfg3); }

.appsg0 { background: var(--appsg0); }
.appsg1 { background: var(--appsg1); }

.appbgbtn1 { background: var(--appbgbtn1); }
.appbgbtn2 { background: var(--appbgbtn2); }
.appfgbtn1 { color: var(--appfgbtn1); }
.appfgbtn2 { color: var(--appfgbtn2); }

.appfg2 .fg70, .appfg2 .text-gray-700 { color: var(--appfg2); opacity: 0.7; }

.colorowner { color:var(--appbgowner); } 
.coloradmin { color:var(--appbgadmin); } 
.colormod { color:var(--appbgmod); } 

.btn {
    @apply appbgbtn1 appfgbtn1 relative mr-1 my-1 py-1 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white disabled:opacity-75 font-bold;  
}
.btn:before {
    content:" ";
    background:#00000033;
    display:block;
    position:absolute;
    top:0; left:0; right:0; bottom:0;
    opacity:0;
}
.btn:hover:before { opacity:1; }
.btn2 {
  @apply appbgbtn2 appfgbtn2 relative mr-1 my-1 py-1 px-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white disabled:opacity-75 font-bold;
}
.btn2:before {
    content:" ";
    background:#00000033;
    display:block;
    position:absolute;
    top:0; left:0; right:0; bottom:0;
    opacity:0;
}
.btn2:hover:before { opacity:1; }

.inputText {
    @apply appearance-none block px-1 py-0 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm;
    color: inherit;
    background: inherit;
}
.inputText1 {
    @apply appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm;
    color: inherit;
    background: inherit;
}

.inputSelect1 {
    @apply px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm;
    color: inherit;
    background: inherit;
}

.tab > button {
    @apply mx-1;
    padding: 0px 1px;
    font-weight: bold;
    border-bottom: 5px solid #c7c7c7;
}
.tab > button[aria-selected="true"] {
    /*border-bottom: 5px solid #059669;*/
    border-bottom: 5px solid var(--appbgbtn1);
}

.border-default {
    border: 1px solid #0000002e;
}
.border-r-1 {
    border-right: 1px solid #0000002e;
}
.border-l-1 {
    border-left: 1px solid #0000002e;
}
.border-t-1 {
    border-top: 1px solid #0000002e;
}
.border-b-1 {
    border-bottom: 1px solid #0000002e;
}
.av128 {
    font-size: 45px;
    width: 128px;
    height: 128px;
}
.avCommunity {
    font-size: 20px;
    width: 54px;
    height: 54px;
}
.avMini {
    font-size: 8.5px;
    width: 20px;
    height: 20px;
}
.avMessage {
    font-size: 19px;
    width: 42px;
    height: 42px;
}
.avConversation {
    font-size: 16px;
    width: 35px;
    height: 35px;
}
.w-200 { width: 200px; }
.mr-5px { margin-right: 5px;}
.oi-x { top: 0px;}
.oiMini:before { font-size: 11px; padding-right: 1px; }

@tailwind base;
@tailwind components;
@tailwind utilities;

hr {
    border-top: 1px solid #0000003d;
    height: 1px;
    width: 100%;
    margin: 3px 0px 0px 0px;
}
.vue-simple-context-menu {
    border: 1px solid #c7c7c7;
    font-family: inherit;
}
.vue-simple-context-menu__item {
    @apply text-sm;
    padding: 3px 10px;
}
.vue-simple-context-menu__item:hover {
  background-color: teal;
  color: #fff;
}

